--- a/style.css
+++ b/style.css
@@ -1,26 +1,26 @@
-@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700&display=swap');
-*{
+@import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700&display=swap");
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Orbitron', sans-serif;
+  font-family: "Orbitron", sans-serif;
   transition: all 0.4s ease;
 }
-section{
+section {
   min-height: 100vh;
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #F0F8FF;
+  background: #f0f8ff;
   padding: 0 20px;
 }
-section.dark{
-  background: #24292D;
+section.dark {
+  background: #24292d;
 }
-section .container{
+section .container {
   display: flex;
-  align-items center;
+  align-items: center;
   justify-content: center;
   height: 220px;
   max-width: 560px;
@@ -30,16 +30,16 @@ section .container{
   border-radius: 12px;
   position: relative;
 }
-section.dark .container{
+section.dark .container {
   background: #323840;
 }
-section .container .icons i{
+section .container .icons i {
   position: absolute;
   right: 17px;
   top: 17px;
   height: 30px;
   width: 30px;
-  background: #24292D;
+  background: #24292d;
   color: #fff;
   text-align: center;
   line-height: 30px;
@@ -47,29 +47,29 @@ section .container .icons i{
   font-size: 14px;
   cursor: pointer;
 }
-section.dark .container .icons i{
+section.dark .container .icons i {
   background: #fff;
   color: #323840;
 }
-.container .icons i.fa-sun{
+.container .icons i.fa-sun {
   opacity: 0;
   pointer-events: none;
 }
-section.dark .container .icons i.fa-sun{
+section.dark .container .icons i.fa-sun {
   opacity: 1;
   pointer-events: auto;
   font-size: 16px;
 }
-section .container .time{
+section .container .time {
   display: flex;
   align-items: center;
 }
-.container .time .time-colon{
+.container .time .time-colon {
   display: flex;
   align-items: center;
   position: relative;
 }
-.time .time-colon .am_pm{
+.time .time-colon .am_pm {
   position: absolute;
   top: 0;
   right: -50px;
@@ -77,41 +77,41 @@ section .container .time{
   font-weight: 700;
   letter-spacing: 1px;
 }
-section.dark .time .time-colon .am_pm{
+section.dark .time .time-colon .am_pm {
   color: #fff;
 }
-.time .time-colon .time-text{
+.time .time-colon .time-text {
   height: 100px;
   width: 100px;
   display: flex;
   align-items: center;
   flex-direction: column;
   justify-content: center;
-  background: #F0F8FF;
+  background: #f0f8ff;
   border-radius: 6px;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
 }
-section.dark .time .time-colon .time-text{
-  background: #24292D;
+section.dark .time .time-colon .time-text {
+  background: #24292d;
 }
 .time .time-colon .time-text,
-.time .time-colon .colon{
+.time .time-colon .colon {
   font-size: 35px;
   font-weight: 600;
 }
 section.dark .time .time-text .num,
-section.dark .time .colon{
+section.dark .time .colon {
   color: #fff;
 }
-.time .time-colon .colon{
+.time .time-colon .colon {
   font-size: 40px;
   margin: 0 10px;
 }
-.time .time-colon .time-text .text{
+.time .time-colon .time-text .text {
   font-size: 12px;
   font-weight: 700;
   letter-spacing: 2px;
 }
-section.dark  .time .time-colon .text{
+section.dark .time .time-colon .text {
   color: #fff;
 }
